Add routes for article pages

--- a/templates/article1.html
+++ b/templates/article1.html
@@ -67,34 +67,34 @@
                     <div class = "others" id = "others">
                         <p style = "font-weight: bold; color: #919191; font-size: 1vw; margin-left: 1vw">Related articles</p>
                         <div class = "related_article" id = "related_article" style = "height: 7.55vw">
-                            <a href = "article2.html"><img src="../static/images/related article2.png" alt="AquaEmi's related article" style = "width: 7vw; height: 7.6vw"></a>
+                            <a href = "{{ url_for('article2_page') }}"><img src="../static/images/related article2.png" alt="AquaEmi's related article" style = "width: 7vw; height: 7.6vw"></a>
                             <div class = "related_article_content" id = "related_article_content">
-                                <a href = "article2.html" class = "name"><p style = "font-size: 1vw; font-weight: bold;">The Pacific Ocean's seabed could soon be open for deep-sea mining</p></a>
-                                <a href = "article2.html"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">7 hours ago</p></a>
-                                <a href = "article2.html"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464;">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
+                                <a href = "{{ url_for('article2_page') }}" class = "name"><p style = "font-size: 1vw; font-weight: bold;">The Pacific Ocean's seabed could soon be open for deep-sea mining</p></a>
+                                <a href = "{{ url_for('article2_page') }}"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">7 hours ago</p></a>
+                                <a href = "{{ url_for('article2_page') }}"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464;">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
                             </div>
                         </div>
                         <div class = "related_article" id = "related_article" style = "height: 9.7vw">
-                            <a href = "article3.html"><img src="../static/images/related article3.png" alt="AquaEmi's related article" style = "width: 7vw; height: 9.7vw"></a>
+                            <a href = "{{ url_for('article3_page') }}"><img src="../static/images/related article3.png" alt="AquaEmi's related article" style = "width: 7vw; height: 9.7vw"></a>
                             <div class = "related_article_content" id = "related_article_content" style = "padding-right: 1vw">
-                                <a href = "article3.html" class = "name"><p style = "font-size: 1vw; font-weight: bold;">More than 170 trillion plastic particles found in the ocean as pollution reaches ‘unprecedented’ levels</p></a>
-                                <a href = "article3.html"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">A day ago</p></a>
-                                <a href = "article3.html"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464; margin-top: -0.3vw; ">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
+                                <a href = "{{ url_for('article3_page') }}" class = "name"><p style = "font-size: 1vw; font-weight: bold;">More than 170 trillion plastic particles found in the ocean as pollution reaches ‘unprecedented’ levels</p></a>
+                                <a href = "{{ url_for('article3_page') }}"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">A day ago</p></a>
+                                <a href = "{{ url_for('article3_page') }}"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464; margin-top: -0.3vw; ">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
                             </div>
                         </div>
                         <div class = "related_article" id = "related_article" style = "height: 7.55vw">
-                            <a href = "article4.html"><img src="../static/images/related article4.png" alt="AquaEmi's related article" style = "width: 7vw; height: 7.6vw"></a>
+                            <a href = "{{ url_for('article4_page') }}"><img src="../static/images/related article4.png" alt="AquaEmi's related article" style = "width: 7vw; height: 7.6vw"></a>
                             <div class = "related_article_content" id = "related_article_content">
-                                <a href = "article4.html" class = "name"><p style = "font-size: 1vw; font-weight: bold;">Vietnam's groundwater is increasingly polluted</p></a>
-                                <a href = "article4.html"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">Two days ago</p></a>
+                                <a href = "{{ url_for('article4_page') }}" class = "name"><p style = "font-size: 1vw; font-weight: bold;">Vietnam's groundwater is increasingly polluted</p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">Two days ago</p></a>
                             </div>
                         </div>
                         <div class = "related_article" id = "related_article" style = "height: 8.6vw">
-                            <a href = "article5.html"><img src="../static/images/related article5.png" alt="AquaEmi's related article" style = "width: 7vw; height: 8.7vw"></a>
+                            <a href = "{{ url_for('article5_page') }}"><img src="../static/images/related article5.png" alt="AquaEmi's related article" style = "width: 7vw; height: 8.7vw"></a>
                             <div class = "related_article_content" id = "related_article_content">
-                                <a href = "article5.html" class = "name"><p style = "font-size: 1vw; font-weight: bold;">Current State of Water Pollution Worldwide: WQI Data and Remedial Measures</p></a>
-                                <a href = "article5.html"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">Sat, July 29, 2023</p></a>
-                                <a href = "article5.html"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464;">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
+                                <a href = "{{ url_for('article5_page') }}" class = "name"><p style = "font-size: 1vw; font-weight: bold;">Current State of Water Pollution Worldwide: WQI Data and Remedial Measures</p></a>
+                                <a href = "{{ url_for('article5_page') }}"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">Sat, July 29, 2023</p></a>
+                                <a href = "{{ url_for('article5_page') }}"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464;">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
                             </div>
                         </div>
                     </div>
