--- a/templates/article5.html
+++ b/templates/article5.html
@@ -65,35 +65,35 @@
                     <div class = "others" id = "others">
                         <p style = "font-weight: bold; color: #919191; font-size: 1vw; margin-left: 1vw">Related articles</p>
                         <div class = "related_article" id = "related_article" style = "height: 7.4vw">
-                            <a href = "article1.html"><img src="../static/images/related article1.png" alt="AquaEmi's related articles" style = "width: 7vw; height: 7.4vw"></a>
+                            <a href = "{{ url_for('article4_page') }}"><img src="../static/images/related article1.png" alt="AquaEmi's related articles" style = "width: 7vw; height: 7.4vw"></a>
                             <div class = "related_article_content" id = "related_article_content">
-                                <a href = "article1.html"><p  class = "name" style = "font-size: 1vw; font-weight: bold;">US agency takes unprecedented action to tackle PFAS water pollution</p></a>
-                                <a href = "article1.html"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">2 hours ago</p></a>
-                                <a href = "article1.html"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464;">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p  class = "name" style = "font-size: 1vw; font-weight: bold;">US agency takes unprecedented action to tackle PFAS water pollution</p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">2 hours ago</p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464;">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
                             </div>
                         </div>
                         <div class = "related_article" id = "related_article" style = "height: 7.4vw">
-                            <a href = "article2.html"><img src="../static/images/related article2.png" alt="AquaEmi's related articles" style = "width: 7vw; height: 7.4vw"></a>
+                            <a href = "{{ url_for('article4_page') }}"><img src="../static/images/related article2.png" alt="AquaEmi's related articles" style = "width: 7vw; height: 7.4vw"></a>
                             <div class = "related_article_content" id = "related_article_content" style = "padding-right: 1vw">
-                                <a href = "article2.html"><p  class = "name" style = "font-size: 1vw; font-weight: bold;">The Pacific Ocean's seabed could soon be open for deep-sea mining</p></a>
-                                <a href = "article2.html"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">7 hours ago</p></a>
-                                <a href = "article2.html"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464; margin-top: -0.3vw;">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p  class = "name" style = "font-size: 1vw; font-weight: bold;">The Pacific Ocean's seabed could soon be open for deep-sea mining</p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">7 hours ago</p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464; margin-top: -0.3vw;">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
                             </div>
                         </div>
                         <div class = "related_article" id = "related_article" style = "height: 10vw">
-                            <a href = "article3.html"><img src="../static/images/related article3.png" alt="AquaEmi's related articles" style = "width: 7vw; height: 10vw"></a>
+                            <a href = "{{ url_for('article4_page') }}"><img src="../static/images/related article3.png" alt="AquaEmi's related articles" style = "width: 7vw; height: 10vw"></a>
                             <div class = "related_article_content" id = "related_article_content">
-                                <a href = "article3.html"><p class = "name" style = "font-size: 1vw; font-weight: bold;">More than 170 trillion plastic particles found in the ocean as pollution reaches ‘unprecedented’ levels</p></a>
-                                <a href = "article3.html"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">A day ago</p></a>
-                                <a href = "article3.html"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464; ">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p class = "name" style = "font-size: 1vw; font-weight: bold;">More than 170 trillion plastic particles found in the ocean as pollution reaches ‘unprecedented’ levels</p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">A day ago</p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464; ">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
                             </div>
                         </div>
                         <div class = "related_article" id = "related_article" style = "height: 7.4vw">
-                            <a href = "article4.html"><img src="../static/images/related article4.png" alt="AquaEmi's related articles" style = "width: 7vw; height: 7.4vw"></a>
+                            <a href = "{{ url_for('article4_page') }}"><img src="../static/images/related article4.png" alt="AquaEmi's related articles" style = "width: 7vw; height: 7.4vw"></a>
                             <div class = "related_article_content" id = "related_article_content">
-                                <a href = "article4.html"><p  class = "name" style = "font-size: 1vw; font-weight: bold;">Vietnam's groundwater is increasingly polluted</p></a>
-                                <a href = "article4.html"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">Two days ago</p></a>
-                                <a href = "article4.html"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464;">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p  class = "name" style = "font-size: 1vw; font-weight: bold;">Vietnam's groundwater is increasingly polluted</p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p style = "font-size: 0.8vw; margin-top: -0.7vw;">Two days ago</p></a>
+                                <a href = "{{ url_for('article4_page') }}"><p style = "font-size: 0.7vw; font-weight: bold; color: #646464;">READ NOW <i class="fa-solid fa-angle-right fa-2xs"></i></p></a>
                             </div>
                         </div>
                     </div>
